# Empty-Repo-Sandbox

./: .gitignore  CMakeLists.txt  README.md  basicMaster.cpp  basicViewer.cpp  build.bat  build.sh  configure.bat  configure.sh  sandbox.cpp  simpleMaster.c  simpleViewer.cpp  simpleViewer_withvideo.cpp  startMasterStream.bat
SonoStationGUI/: CMakeLists.txt  build.bat  build.sh  configure.bat  configure.sh
SonoStationGUI/inc/: CameraDemo.hpp  CameraStreamingWidget.hpp
SonoStationGUI/src/: sample.pro
SonoStationGUI/tests/: CameraDemo.cpp
Utils/: CMakeLists.txt  build.bat  build.sh  configure.bat  configure.sh  configure_debug.bat
Utils/inc/: AsyncRunnable.hpp  AuthMessage.hpp  CalibrationConfig.hpp  CommonUtilities.hpp  Context.hpp  DataLogger.hpp  EventChannel.hpp  GenericChannel.hpp  GenericModule.hpp  HTTPSWrite.hpp  HTTPWebSocketInterface.hpp  IPCConfig.hpp  IPCMessage.hpp  JSONMessage.hpp  KeyboardMouseHook.hpp  ModuleEvents.h  README.md  SerializationInterface.hpp  SocketInterface.hpp  StateChannel.hpp  TMatrixPacket.hpp  USParamConfig.hpp  UltrasoundMessage.hpp  WSInterface.hpp  WSSInterface.hpp  WebSocketClientInterface.hpp  WebSocketServerInterface.hpp  tempMessage.hpp
Utils/tests/: ConcreteModuleClassTest.cpp  HTTPWebSocketTest.cpp  HTTPWebSocketTestRobot.cpp  HTTP_WSS_Test.cpp  HTTP_WSS_Test_Robot.cpp  KeyboardMouseHookTest.cpp  README.md  StateChannelTest.cpp  TMatrixPacketTest.cpp  UDPInducedLag.cpp  UDPSocketModuleTest.cpp  WSPP_Async.cpp  WSPP_Async_Robot.cpp  WSPP_Async_no_ssl.cpp  WebSocketTest.cpp
inc/: Samples.h
src/: Common.c  GstAudioVideoReceiver.c  GstAudioVideoReceiver.cpp  GstAudioVideoReceiver_video.cpp
tests/: kvs_webrtc_master_test.cpp  kvs_webrtc_viewer_test.cpp  sample_test.cpp
